syntax = "proto3";

package gws;

option java_package = "net.foreworld.gws.protobuf";
option java_outer_classname = "Common";

message SenderProtobuf {
  string sender = 1;
  RequestProtobuf data = 2;
}

message ReceiverProtobuf {
  string receiver = 1;
  ResponseProtobuf data = 2;
}

message RequestProtobuf {
  uint32 version = 1;
  uint32 method = 2;
  uint64 seqId = 3;
  uint64 timestamp = 4;
  bytes data = 5;
}

message ResponseProtobuf {
  uint32 version = 1;
  uint32 method = 2;
  uint64 seqId = 3;
  uint64 timestamp = 4;
  bytes data = 5;
  ErrorProtobuf error = 6;

  message ErrorProtobuf {
    string code = 1;
    bytes msg = 2;
  }
}