syntax = "proto3";

package gws;

option java_package = "net.foreworld.gws.protobuf";
option java_outer_classname = "Fishjoy";

message FishjoyBulletProtobuf {
  uint64 timestamp = 1;
  uint32 level = 2;
  string sender = 3;
  float x = 4;
  float y = 5;
  uint32 speed = 6;
}

message FishjoyFishProtobuf {
  string id = 1;
  uint32 type = 2;
}

message FishjoyFishCoordinateProtobuf {
  FishjoyFishProtobuf fish = 1;
  uint64 timestamp = 2;
  float x = 3;
  float y = 4;
  float angle = 5;
}

message FishjoyFishDeadProtobuf {
  FishjoyFishProtobuf fish = 1;
  FishjoyBulletProtobuf bullet = 2;
  uint64 timestamp = 3;
  uint32 score = 4;
}